--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 #DataBase start
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/moxi?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=Shu1shu2
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/moxi?useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=Shu1shu2
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.schema = classpath:/sql/schema.sql
 #DataBase end
 
 #mybatis start
-mybatis.config-location=classpath:/mybatis-config.xml
+mybatis.configuration.logImpl = org.apache.ibatis.logging.stdout.StdOutImpl
 #mybatis end
 
 
