--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
+            <artifactId>jQuery-slimScroll</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
             <artifactId>jquery-ui</artifactId>
             <version>1.10.4</version>
         </dependency>
